# sendai_2025

camera/: blue_camera.py  camera.py  red_camera.py  uart.py  uart_ras.c  yellow_camera
sendai_pico/: CMakeLists.txt  helloworld_1.py  helloworld_1.py.autosave
sendai_pico/lib/: CMakeLists.txt  config.h  memo.txt
sendai_pico/lib/LiDAR/: LiDAR.cpp
sendai_pico/lib/LiDAR/Pico-VL53L0X/: vl53l0x_i2c_platform.h
sendai_pico/lib/LiDAR/Pico-VL53L0X/platform/src/: vl53l0x_i2c_comms.cpp
sendai_pico/lib/VL53L0X/: CMakeLists.txt  VL53L0X.cpp  VL53L0X.h
sendai_pico/lib/debug/: CMakeLists.txt  debug.c  debug.h
sendai_pico/lib/gyro/: CMakeLIsts.txt  gyro.c  gyro.h
sendai_pico/lib/interface/: CMakeLists.txt  interface.c  interface.h
sendai_pico/lib/mcp3208/: mcp3208.c  mcp3208.h
sendai_pico/lib/servo/: CMakeLIsts.txt  servo.c  servo.h
sendai_pico/lib/stepper/: CMakeLists.txt  stepper.c  stepper.h
sendai_pico/main/: CMakeLists.txt  main.c  main.cpp  movement.c  movement.h  ws2812.pio.h
